update of lecture material 1

--- a/lecture1.ipynb
+++ b/lecture1.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "In frequentist approach the probability is defined as \n",
     "\n",
-    "$$P(x) = \\lim_{n\\rightarrow \\infty} \\frac{n_x}{n}\\,.$$\n",
+    "$$P(x) = \\lim_{n\\rightarrow \\infty} \\frac{n_x}{n}\\,. \\tag{1}$$\n",
     "\n",
     "In other words, probability is a long term frequency of an event in repeated, independent trials.\n",
     "\n",
@@ -79,7 +79,7 @@
     "\n",
     "The key concept of Bayesian approach is Bayes' theorem\n",
     "\n",
-    "$$P(A|B) = \\frac{P(B|A)P(A)}{P(B)}\\,.$$\n",
+    "$$P(A|B) = \\frac{P(B|A)P(A)}{P(B)}\\,. \\tag{2}$$\n",
     "\n",
     "Here we talk about probability as \"degree of belief\" based on data and our previous belief. Compared to frequentist approach, we now introduce new concept - prior, which encodes this \"previous belief\".\n",
     "\n",
@@ -105,7 +105,7 @@
     "\n",
     "As it's name says, Bayesian framework is based on Bayes' Theorem. Renaming some variables from the Bayes's Thereom more useful way we have now\n",
     "\n",
-    "$$P(\\mathbf{\\theta}|d) = \\frac{P(d|\\mathbf{\\theta})P(\\mathbf{\\theta})}{P(d)}\\,.$$\n",
+    "$$P(\\mathbf{\\theta}|d) = \\frac{P(d|\\mathbf{\\theta})P(\\mathbf{\\theta})}{P(d)}\\,. \\tag{3}$$\n",
     "\n",
     "where $d$ - data, $\\theta$  - parameters of interest. In this formulation we have\n",
     "\n",
@@ -119,7 +119,7 @@
     " * Binomial (Binary observations with fixed probability)\n",
     "\n",
     " In the case of multiple likelihoods, we can calculate the joint (total) likelihood as \n",
-    " $$\\mathcal{L}_{\\rm tot} = \\prod_{i=1}^{n} \\mathcal{L}_i$$\n",
+    " $$\\mathcal{L}_{\\rm tot} = \\prod_{i=1}^{n} \\mathcal{L}_i \\tag{4}$$\n",
     "\n",
     "\n",
     "#### Prior **$P(\\mathbf{\\theta})$**:\n",
@@ -140,14 +140,15 @@
     "#### Evidence **$P(d)$**:\n",
     "\n",
     "Otherwise known as marginal likelihood. Evidence is normalisation factor, as we require and is often ignored\n",
-    "$$\\int P(\\theta|d) d\\theta = 1\\,,$$\n",
+    "$$\\int P(\\theta|d) d\\theta = 1\\,, \\tag{5}$$\n",
     "we need that \n",
-    "$$\\int P(d|\\theta)P(\\theta)d\\theta = P(d)\\,.$$\n",
+    "$$\\int P(d|\\theta)P(\\theta)d\\theta = P(d)\\,. \\tag{6}$$\n",
     "Sometimes it is also said that it measures how well model predicts the data. Latter makes it possible to compare different models. Using Bayes' theorem again we can now show that\n",
     "\n",
-    "$$\\frac{P(M_1 | d)}{P(M_2 | d)} = \\overbrace{\\frac{P(D | M_1)}{P(D | M_2)}}^{\\text{Bayes factor}\\ K} \\times \\frac{P(M_1)}{P(M_2)}$$\n",
+    "$$\\frac{P(M_1 | d)}{P(M_2 | d)} = \\overbrace{\\frac{P(D | M_1)}{P(D | M_2)}}^{\\text{Bayes factor}\\ K} \\times \\frac{P(M_1)}{P(M_2)} \\tag{7}$$\n",
     "where $M$ now represents a \"model\".\n",
     "\n",
+    "##### Jeffrey's scale\n",
     "To interpret the Bayes' factor $K$ value we can use Jeffrey's scale which says that \n",
     " * $K < 1 \\Rightarrow$ model $M_2$ is better\n",
     " * $1 \\leq K < 10^{1/2} \\Rightarrow$ model difference is barely worth mentioning\n",
@@ -400,7 +401,7 @@
     "$P(\\theta, D) = P(\\theta_1, \\theta_2, \\dots | D)\\,.$\n",
     "Let's say, we are not interested in the effects cause by nuisance parameters $\\theta_3$ and $\\theta_4$, which we have to use when calculating, but are not relevant to our theoretical model. This happens for example, if the parameters describe the measurement process itself. In Bayesian statistics it is possible to easily remove them from analysis by doing\n",
     "\n",
-    "$$P(\\theta_1, \\theta_2, \\theta_5, \\dots | D) = \\int \\int P(\\theta_1, \\theta_2, \\dots | D) d\\theta_3 d\\theta_4\\,.$$\n",
+    "$$P(\\theta_1, \\theta_2, \\theta_5, \\dots | D) = \\int \\int P(\\theta_1, \\theta_2, \\dots | D) d\\theta_3 d\\theta_4\\,. \\tag{8}$$\n",
     "\n",
     "This is usually done numerically and when we use results produced by MCMC it's even simpler.\n"
    ]
@@ -415,23 +416,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afecafa",
-   "metadata": {},
-   "source": [
-    "* Run 1 [Purely late-time] - Pantheon+ (without SH0ES calibration) + DESI DR2;\n",
-    "* Run 2 [Purely early-time] - CMB-SPA;\n",
-    "* Run 3 [Combined scenario] - CMB-SPA + Pantheon+ (without SH0ES calibration) + DESI DR2;\n",
-    "* Run 4 [Purely late-time] - Pantheon+ (with SH0ES calibration) + DESI DR2;\n",
-    "* Run 5 [Combined scenario] - CMB-SPA + Pantheon+ (with SH0ES calibration) + DESI DR2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0b4d64a1",
    "metadata": {},
    "source": [
     "### **CMB** - Early Universe\n",
-    " * Encodes information about early universe\n",
+    "\n",
+    "\n",
+    "<figure  style=\"text-align: center;\">\n",
+    "  <img src=\"images/CMB.jpg\" alt=\"CMB\" style=\"width: 75%; height: auto;\">\n",
+    "  <figcaption>Picture of a CMB by ESA and the Planck Collaboration </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    " * Encodes information about early universe ($z\\approx 1089$, $380\\ 000$ yr after \"Big bang\")\n",
     " * Independent parameters\n",
     "   * At the decoupling:\n",
     "     * $\\Omega_b$ - Baryion density parameter\n",
@@ -445,7 +441,14 @@
     "     * $w$ - equation of state (eos)\n",
     "     * $m_{\\nu_i}$ - neutrino masses\n",
     "   * In principle different parameters can be selected as independent ($\\theta_{MC} \\rightarrow \\Omega_0, \\Omega_{\\Lambda0}$)\n",
-    "   \n",
+    "\n",
+    "Angular scale of the sound horizon is the maximum distance the sound wave have travelled divided by the \n",
+    "\\begin{equation}\n",
+    "  \\begin{split}\n",
+    "    & \\theta_s \\equiv \\frac{r_s^c(t_{dec})}{D_A^c(t_{dec})}\\\\\n",
+    "    & r_s^c = \\int_0^{t_{\\text{dec}}} \\frac{c_s(t)}{a(t)}dt = \\int_0^{a_{\\text{dec}}} \\frac{c_s(a) da}{a H}\\,, \\ c_s^2(a) = \\frac{1}{3} \\frac{1}{1+\\frac{3\\omega_b}{4\\omega_\\gamma}a}\n",
+    "  \\end{split} \\tag{9}\n",
+    "\\end{equation}\n",
     "[More about CMB parameters from a lecture by Syksy Räsänen ](https://www.mv.helsinki.fi/home/syrasane/cosmo/lect2024_10.pdf)\n",
     "\n",
     "#### Planck 2018\n",
@@ -454,12 +457,28 @@
     "\n",
     "#### BICEP/Keck\n",
     " * Focus on detecting B-mode polarization in CMB \n",
-    "   * Signature of primordial gravitational waves from inflation\n",
+    "   * Signature of primordial gravitational waves from inflation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "842e557c",
+   "metadata": {},
+   "source": [
+    "### **Baryon Acoustic Oscillations (BAO)** - Late universe\n",
+    "\n",
+    "Experiments measuring large scale structure. Acts as a \"standard\" ruler. \n",
+    "\n",
+    "BAO was created near decoupling when electrons and photons were coupled. In this time gravity tried to pull the matter together but the radiation pressure pushed it apart. This created sound waves inside the plasma. After cooling the sound waves \"stopped\" and left imprints into the current matter distribution. From the theory we can calculate the sound horizon (how far the sound waves moved) and using results from Placnk (to get $\\omega_m$ and $\\omega_r$) we get that $$r_s \\approx 147\\ \\rm Mpc\\,,\\tag{10}$$ which is also seen in the matter power spectrum measurments. \n",
     "\n",
     "<figure  style=\"text-align: center;\">\n",
-    "  <img src=\"images/CMB.jpg\" alt=\"CMB\" style=\"width: 75%; height: auto;\">\n",
-    "  <figcaption>Picture of a CMB</figcaption>\n",
-    "</figure>\n"
+    "  <img src=\"images/BAO_creation.png\" alt=\"Hubble tension\" style=\"width: 75%; height: auto;\">\n",
+    "  <figcaption>Picture from: Daniel J. Eisenstein (Arizona U., Astron. Dept. - Steward Observ.), Hee-jong Seo (Arizona U., Astron. Dept. - Steward Observ.), Martin J. White (UC, Berkeley, Astron. Dept.), \"On the Robustness of the Acoustic Scale in the Low-Redshift Clustering of Matter\" <a href=https://arxiv.org/abs/astro-ph/0604361>https://arxiv.org/abs/astro-ph/0604361</a> </figcaption>\n",
+    "</figure>\n",
+    "More about [BAO](https://arxiv.org/pdf/0910.5224).\n",
+    "\n",
+    "* DESI (Dark Energy Spectroscopic Instrument)\n",
+    "  * Data: [DESI Data documentation](https://data.desi.lbl.gov/doc/) and also from [GitHub Cobaya](https://github.com/CobayaSampler/bao_data/tree/master/desi_bao_dr2)"
    ]
   },
   {
@@ -471,26 +490,29 @@
     "\n",
     "Type Ia Supernovaes are mainly from late universe ($z\\leq1$). We measure apparent magnitude which depends on the luminosity distance\n",
     "\n",
-    "$$D_L = (1+z)\\frac{c}{H_0} \\int \\limits_{0}^{z} \\frac{dz'}{E(z')}\\,,\\ E(z) = \\sqrt{\\Omega_m(1+z)^3 + \\Omega_\\Lambda}\\,.$$\n",
-    "For the moment we assume flat universe. Supernovae measurement by itself can't measure $H_0$ directly. If distances to Supernovaes are added we can also measure local $H_0$.\n",
+    "$$D_L = (1+z)\\frac{c}{H_0} \\int \\limits_{0}^{z} \\frac{dz'}{E(z')}\\,,\\ E(z) = \\sqrt{\\Omega_m(1+z)^3 + \\Omega_\\Lambda}\\,.\\tag{11}$$\n",
+    "For the moment we assume flat universe. Supernovae measurement by itself can't measure $H_0$ directly. If distances to Supernovaes are added we can also measure local $H_0$. *(more about this in the next lecture)*\n",
     "\n",
     "**NB! Supernovae data and CMB measurements give different values for H_0! $\\Rightarrow$ Hubble tension**\n",
     "\n",
     "<figure  style=\"text-align: center;\">\n",
-    "  <img src=\"images/HubbleTension.png\" alt=\"Hubble tension\" style=\"width: 75%; height: auto;\">\n",
-    "  <figcaption>Picture of a Hubble tension <a href=https://arxiv.org/pdf/1907.10625>https://arxiv.org/pdf/1907.10625 </a></figcaption>\n",
+    "  <img src=\"images/Pantheon+SH0ES.png\" alt=\"Hubble tension\" style=\"width: 75%; height: auto;\">\n",
+    "  <!--<figcaption>Picture of a Hubble tension <a href=https://arxiv.org/pdf/1907.10625>https://arxiv.org/pdf/1907.10625 </a></figcaption>-->\n",
+    "  <figcaption>Picture of a Pantheon+ & SH0ES analysis <a href=https://arxiv.org/pdf/2202.04077>https://arxiv.org/pdf/2202.04077. </a> We can also see the Hubble tension between Supernovae and Planck datasets.</figcaption>\n",
     "</figure>\n",
     "\n",
     "\n",
-    "Some of the most known datasets:\n",
+    "Some of the most common datasets:\n",
     " * DES (Dark Energy Survey)\n",
     "   * ~1800 Sn type Ia with z~0.02 to ~1\n",
     "   * [Cosmology results](https://arxiv.org/pdf/2401.02929) and [newer analysis](https://arxiv.org/pdf/2511.07517)\n",
     "   * Data: [Older dataset from Cobaya](https://github.com/CobayaSampler/sn_data/tree/master/DESY5), [Newer analysis method Cobaya](https://github.com/CobayaSampler/sn_data/tree/master/DES-Dovekie)\n",
+    "   * Measures apparent magnitude $m$ and redshift $z$\n",
     " * Pantheon+\n",
-    "   * ~1500 Sn type Ia with z~0.03 to 2.3 \n",
+    "   * ~1700 Sn type Ia with z~0.03 to 2.3 \n",
     "   * [Dataset article](https://arxiv.org/pdf/2112.03863) and [Cosmology results](https://arxiv.org/pdf/2202.04077)\n",
     "   * Data: [GitHub Cobaya](https://github.com/CobayaSampler/sn_data/tree/master/PantheonPlus)\n",
+    "   * Measures apparent magnitude $m$ and redshift $z$\n",
     " * SH0ES (Supernova $H_0$ for the Equation of State)\n",
     "   * Started 2005 \n",
     "   * Main aim is to measure $H_0$ (local)\n",
@@ -501,23 +523,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12ed4c0",
+   "id": "b8e4cb94",
    "metadata": {},
    "source": [
-    "### **Baryon Acoustic Oscillations (BAO)** - Late universe\n",
+    "# Extra\n",
+    "## Cosmological distances\n",
     "\n",
-    "Experiments measuring large scale structure. Acts as a \"standard\" ruler. \n",
+    "Before we can lay out the datasets it's good to brielfy remind about different cosmological distances. As distances in the end are things we can usually measure. We have FLRW metric\n",
+    "\\begin{equation}\n",
+    "    ds^2 = -c^2 dt^2 + a(t)^2 \\left[dr^2 + S_k(r)^2 d\\Omega^2 \\right] \\tag{12}\n",
+    "\\end{equation}\n",
+    "where \n",
     "\n",
-    "BAO was created near decoupling when electrons and photons were coupled. In this time gravity tried to pull the matter together but the radiation pressure pushed it apart. This created sound waves inside the plasma. After cooling the sound waves \"stopped\" and left imprints into the current matter distribution. From the theory we can calculate the sound horizon (how far the sound waves moved) and using results from Placnk (to get $\\omega_m$ and $\\omega_r$) we get that $$r_s \\approx 147\\ \\rm Mpc\\,,$$ which is also seen in the matter power spectrum measurments. \n",
+    "\\begin{equation}\n",
+    "    S_k(r) = \n",
+    "    \\begin{cases}\n",
+    "        R_0 \\sin(r/R_0) & (k=+1,\\ \\text{closed})\\\\\n",
+    "        r & (k=0,\\ \\text{flat})\\\\\n",
+    "        R_0 \\sinh(r/R_0) & (k=-1,\\ \\text{open} )\\\\\n",
+    "    \\end{cases} \\tag{13}\n",
+    "\\end{equation}\n",
     "\n",
-    "<figure  style=\"text-align: center;\">\n",
-    "  <img src=\"images/BAO_creation.png\" alt=\"Hubble tension\" style=\"width: 75%; height: auto;\">\n",
-    "  <figcaption>Picture from: Daniel J. Eisenstein (Arizona U., Astron. Dept. - Steward Observ.), Hee-jong Seo (Arizona U., Astron. Dept. - Steward Observ.), Martin J. White (UC, Berkeley, Astron. Dept.), \"On the Robustness of the Acoustic Scale in the Low-Redshift Clustering of Matter\" <a href=https://arxiv.org/abs/astro-ph/0604361>https://arxiv.org/abs/astro-ph/0604361</a> </figcaption>\n",
-    "</figure>\n",
-    "More about [BAO](https://arxiv.org/pdf/0910.5224).\n",
+    "To keep things simpler, let's assume throughout the lecture the flat Universe.\n",
+    "Also, from the Friedmann equations we can derive Hubble parameter\n",
+    "\\begin{equation}\n",
+    "    E(z) \\equiv \\frac{H(z)}{H_0} = \\sqrt{\\Omega_r (1+z)^4 + \\Omega_m(1+z)^3 + \\Omega_k(1+z)^2 + \\Omega_\\Lambda + \\Omega_{DE} f(z)} \\tag{14}\n",
+    "\\end{equation}\n",
     "\n",
-    "* DESI (Dark Energy Spectroscopic Instrument)\n",
-    "  * Data: [DESI Data documentation](https://data.desi.lbl.gov/doc/) and also from [GitHub Cobaya](https://github.com/CobayaSampler/bao_data/tree/master/desi_bao_dr2)"
+    "Finally, the distances are\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{split}\n",
+    "        & D_H = \\frac{c}{H_0}\\,,\\ \\text{Hubble distance}\\\\\n",
+    "        & D_C = D_H \\int_{0}^z \\frac{dz'}{E(z')}\\,,\\ \\text{Comoving distance} \\\\\n",
+    "        & D_M = \\begin{cases} \n",
+    "            \\frac{D_H}{\\sqrt{\\Omega_k}} \\sin(\\sqrt{\\Omega_k}D_C/D_H) & (k=+1)\\\\\n",
+    "            D_C & (k=0)\\\\\n",
+    "            \\frac{D_H}{\\sqrt{|\\Omega_k|}} \\sinh(\\sqrt{|\\Omega_k|}D_C/D_H) & (k=-1) \\\\\n",
+    "        \\end{cases}\\,,\\ \\text{Transverse comoving distance} \\\\\n",
+    "        & D_L = (1+z) D_M\\,,\\ \\text{Luminosity distance} \\\\\n",
+    "        & D_A = \\frac{D_M}{1+z}\\,,\\ \\text{Angular distance} \n",
+    "    \\end{split} \\tag{15}\n",
+    "\\end{equation}\n",
+    "\n",
+    "* Comoving distance\n",
+    "  * Does not change with time\n",
+    "  * Distance between observers both moving with the Hubble flow\n",
+    "* Luminosity distance\n",
+    "  * $F \\equiv \\frac{L}{4\\pi D_L^2}$, where $F$ is flux\n",
+    "  * The photons emitted at some past time have since spread over sphere with radius $D_C$ and area $4\\pi D_C^2$\n",
+    "  * The energy during that time has fallen with $E_{\\text{today}} = \\frac{E_{\\text{emitted}}}{1+z}$\n",
+    "  * At the same time there is also time dilation between photons arriving $\\delta t_0 = \\delta t_e (1+z)$\n",
+    "  * Thus $F = \\frac{L}{4\\pi S_k(r)^2 (1+z)^2} \\Rightarrow D_L = D_M (1+z)$\n",
+    "* Angular distance\n",
+    "  * Physical size $l = a(t_{\\text{emitted}}) S_k(r) \\delta \\theta = \\frac{1}{(1+z)}S_k(r) \\delta \\theta$\n",
+    "  * $D_A = \\frac{l}{\\delta \\theta}  \\frac{S_k(r)}{1+z} = \\frac{D_M}{1+z}$  "
    ]
   }
  ],
