Update Lecture1, mainly new pictures

--- a/lecture1.ipynb
+++ b/lecture1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "1d34322a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
     "\n",
     "Although the history starts long ago, the modern cosmology starts in the early 1900s. One key aspect is the Einstein's general relativity theory, which is also base for todays discoveries. But theory itself is not enough. Another very import aspect is the experiment. Einstein's theory wouldn't have been successful if Eddington wouldn't have proved it in 29th May 1919. Decade later it was proposed by Georges Lemaître and 2 years later confirmed by Edwin Hubble, that more recessional velocity of a galaxy depends on the distance to Earth. So it was the early 1900s when we started to have better theory and also more data about the Universe.\n",
     "\n",
-    "Another big discovery was done by accident in the 1960s by Americans Arno Allan Penzias and Robert Woodrow Wilson. The discovery was made with a antenna made for detecting radio waves for another project. They saw, that signal was stronger than expected and ruled out possibilities of hardware malfunction and static noise. The signal kept \"noisy\". Later they were put into contact Robert H. Dicke, astrophysicists 60km away whos reasearch group had a plan to start detecting CMB signals. They estimated that the signal corresponds to 3.5 K background. Later measurements have measured CMB more precisely:\n",
+    "Another big discovery was done by accident in the 1960s by Americans Arno Allan Penzias and Robert Woodrow Wilson. The discovery was made with a antenna made for detecting radio waves for another project. They saw, that signal was stronger than expected and ruled out possibilities of hardware malfunction and static noise. The signal kept \"noisy\". Later they were put into contact with Robert H. Dicke, astrophysicist 60km away whos reasearch group had a plan to start detecting CMB signals. They estimated that the signal corresponds to 3.5 K background. Later measurements have measured CMB more precisely:\n",
     "* Cosmich Background Explorer (COBE) - discovery of anisotropies in the CMB, launched in 1989\n",
     "* Wilkinson Microwave Anisotropy Probe (WMAP) - more accurate measurement of CMB, launched in 2001\n",
     "* Planck sattellite - Latest, most accurete measurement (last data release in 2018) launched in 2009 "
@@ -59,8 +59,9 @@
     "\n",
     "In frequentist approach the probability is defined as \n",
     "\n",
-    "$$P(x) = \\lim_{n\\rightarrow \\infty} \\frac{n_x}{n}\\,. \\tag{1}$$\n",
-    "\n",
+    "\\begin{equation}\n",
+    "    P(x) = \\lim_{n\\rightarrow \\infty} \\frac{n_x}{n}\\,. \\tag{1}\n",
+    "\\end{equation}\n",
     "In other words, probability is a long term frequency of an event in repeated, independent trials.\n",
     "\n",
     "In frequentist approach the parameters of interest are fixed (our model parameters), but unknown. So the random process applies to data acquisition process. To estimate the parameters we must observed data. There are many tecniques to estimate the parameters, some more common are: method of moments, maximum likelihood estimation (MLE).\n",
@@ -78,14 +79,20 @@
     "### **Bayesian approach**\n",
     "\n",
     "The key concept of Bayesian approach is Bayes' theorem\n",
+    "\\begin{equation}\n",
+    "    P(A|B) = \\frac{P(B|A)P(A)}{P(B)}\\,. \\tag{2}\n",
+    "\\end{equation}\n",
     "\n",
-    "$$P(A|B) = \\frac{P(B|A)P(A)}{P(B)}\\,. \\tag{2}$$\n",
     "\n",
+    "<figure  style=\"text-align: center;\">\n",
+    "  <img src=\"images/BayesTheorem.png\" alt=\"Bayes theorem\" style=\"width: 55%; height: auto;\">\n",
+    "  <figcaption>Conditional probaility of two events.</figcaption>\n",
+    "</figure>\n",
     "Here we talk about probability as \"degree of belief\" based on data and our previous belief. Compared to frequentist approach, we now introduce new concept - prior, which encodes this \"previous belief\".\n",
     "\n",
     "In Bayesian statistics the parameters are not fixed anymore are are treated as random variables, following some distribution. The data itself is now \"fixed\".\n",
     "\n",
-    "Both approaches likelihood (quantity measuring how well model explains  observed data), which will be part of the next chapter."
+    "Both approaches use likelihood (quantity measuring how well model explains  observed data), which will be exaplained in the next chapter."
    ]
   },
   {
@@ -105,8 +112,9 @@
     "\n",
     "As it's name says, Bayesian framework is based on Bayes' Theorem. Renaming some variables from the Bayes's Thereom more useful way we have now\n",
     "\n",
-    "$$P(\\mathbf{\\theta}|d) = \\frac{P(d|\\mathbf{\\theta})P(\\mathbf{\\theta})}{P(d)}\\,. \\tag{3}$$\n",
-    "\n",
+    "\\begin{equation}\n",
+    "    P(\\mathbf{\\theta}|d) = \\frac{P(d|\\mathbf{\\theta})P(\\mathbf{\\theta})}{P(d)}\\,. \\tag{3}\n",
+    "\\end{equation}\n",
     "where $d$ - data, $\\theta$  - parameters of interest. In this formulation we have\n",
     "\n",
     "#### Likelihood **$P(d|\\mathbf{\\theta})$**: \n",
@@ -115,12 +123,16 @@
     "\n",
     "Common likelihood functions:\n",
     " * Gaussian (of independent measurements)\n",
+    "       $$\\mathcal{L}(d|\\theta) \\propto \\exp\\left(-\\frac{1}{2}\\left(\\frac{(d - M(\\theta))^2}{\\sigma^2}\\right)^2\\right)$$\n",
     " * Poisson (Discrete distribution with independent events)\n",
+    "       $$\\mathcal{L}(k|\\lambda) \\propto \\frac{\\lambda^k e^{-\\lambda}}{k!}$$\n",
     " * Binomial (Binary observations with fixed probability)\n",
+    "       $$\\mathcal{L}(n,N|p) \\propto \\binom{N}{n}p^n(1-p)^{N-n}$$\n",
     "\n",
-    " In the case of multiple likelihoods, we can calculate the joint (total) likelihood as \n",
-    " $$\\mathcal{L}_{\\rm tot} = \\prod_{i=1}^{n} \\mathcal{L}_i \\tag{4}$$\n",
-    "\n",
+    "In the case of multiple likelihoods, we can calculate the joint (total) likelihood as \n",
+    "\\begin{equation}\n",
+    "    \\mathcal{L}_{\\rm tot} = \\prod_{i=1}^{n} \\mathcal{L}_i \\tag{4}\n",
+    "\\end{equation}\n",
     "\n",
     "#### Prior **$P(\\mathbf{\\theta})$**:\n",
     "\n",
@@ -140,12 +152,19 @@
     "#### Evidence **$P(d)$**:\n",
     "\n",
     "Otherwise known as marginal likelihood. Evidence is normalisation factor, as we require and is often ignored\n",
-    "$$\\int P(\\theta|d) d\\theta = 1\\,, \\tag{5}$$\n",
+    "\\begin{equation}\n",
+    "    \\int P(\\theta|d) d\\theta = 1\\,, \\tag{5}\n",
+    "\\end{equation}\n",
+    "\n",
     "we need that \n",
-    "$$\\int P(d|\\theta)P(\\theta)d\\theta = P(d)\\,. \\tag{6}$$\n",
+    "\\begin{equation}\n",
+    "    \\int P(d|\\theta)P(\\theta)d\\theta = P(d)\\,. \\tag{6}\n",
+    "\\end{equation}\n",
     "Sometimes it is also said that it measures how well model predicts the data. Latter makes it possible to compare different models. Using Bayes' theorem again we can now show that\n",
     "\n",
-    "$$\\frac{P(M_1 | d)}{P(M_2 | d)} = \\overbrace{\\frac{P(D | M_1)}{P(D | M_2)}}^{\\text{Bayes factor}\\ K} \\times \\frac{P(M_1)}{P(M_2)} \\tag{7}$$\n",
+    "\\begin{equation}\n",
+    "    \\frac{P(M_1 | d)}{P(M_2 | d)} = \\overbrace{\\frac{P(D | M_1)}{P(D | M_2)}}^{\\text{Bayes factor}\\ K} \\times \\frac{P(M_1)}{P(M_2)} \\tag{7}\n",
+    "\\end{equation}\n",
     "where $M$ now represents a \"model\".\n",
     "\n",
     "##### Jeffrey's scale\n",
@@ -167,9 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ef8fa714",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def gaussian_credible_interval(mean, std, credible_interval=0.95):\n",
@@ -200,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "3fa3b962",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44ef7ee7ac3e43778c00064d344bff59",
+       "model_id": "c66b9d257077407b9979599c5e05dbbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,10 +366,20 @@
     "        ax3.set_title(\"Posterior\")\n",
     "        \n",
     "        for _ax in [ax1, ax2, ax3]:\n",
+    "            _ax.set_xticks([0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1])\n",
     "            _ax.legend(frameon=True)\n",
     "            _ax.grid()\n",
     "            _ax.set_xlim(0, 1)\n",
     "            _ax.set_xlabel(r\"$\\text{p(Head)}$\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f459bc2-e94e-427d-8713-13b83a91c149",
+   "metadata": {},
+   "source": [
+    "* What will happen to the likelihood if we add more measured data? But what about posterior?\n",
+    "* What will happen to the posterior, if we have more informative prior?"
    ]
   },
   {
@@ -358,12 +391,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c11432dd18a40d5b1c0b522a877a665",
+       "model_id": "d104fd9cdc7e47b39f8e01254b081014",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntText(value=1, description='N heads', step=0), IntText(value=1, description='N tails',…"
+       "interactive(children=(IntText(value=10, description='N heads', step=0), IntText(value=10, description='N tails…"
       ]
      },
      "metadata": {},
@@ -380,8 +413,8 @@
     }
    ],
    "source": [
-    "heads_slider = widgets.IntText(value=1, min=0, max=1000, step=0.1, description='N heads')\n",
-    "tails_slider = widgets.IntText(value=1, min=0, max=1000, step=0.1, description='N tails')\n",
+    "heads_slider = widgets.IntText(value=10, min=0, max=1000, step=0.1, description='N heads')\n",
+    "tails_slider = widgets.IntText(value=10, min=0, max=1000, step=0.1, description='N tails')\n",
     "alpha_slider = widgets.BoundedFloatText(value=1, min=1, max=1000, step=1, description=r'$\\alpha$')\n",
     "beta_slider = widgets.BoundedFloatText(value=1, min=1, max=1000, step=1, description=r'$\\beta$')\n",
     "use_log_checkbox = widgets.Checkbox(value=False, description='Use log porbabilities')\n",
@@ -399,11 +432,24 @@
     "\n",
     "We had posterior \n",
     "$P(\\theta, D) = P(\\theta_1, \\theta_2, \\dots | D)\\,.$\n",
-    "Let's say, we are not interested in the effects cause by nuisance parameters $\\theta_3$ and $\\theta_4$, which we have to use when calculating, but are not relevant to our theoretical model. This happens for example, if the parameters describe the measurement process itself. In Bayesian statistics it is possible to easily remove them from analysis by doing\n",
     "\n",
-    "$$P(\\theta_1, \\theta_2, \\theta_5, \\dots | D) = \\int \\int P(\\theta_1, \\theta_2, \\dots | D) d\\theta_3 d\\theta_4\\,. \\tag{8}$$\n",
+    "If we are interested in:\n",
+    " * Displaying the N-dimensional posterior somehow\n",
+    " * Removing effects caused by some nuisance parameters (like parameters realated to measurements)  \n",
+    "marginalization helps to achive it. \n",
     "\n",
-    "This is usually done numerically and when we use results produced by MCMC it's even simpler.\n"
+    "Let's say, we are not interested in the effects caused by parameters $\\theta_3$ and $\\theta_4$, which we have to use for likelikelihood when calculating, but are not relevant to our theoretical model.In Bayesian statistics it is possible to remove (integrate out) them from probability density function by doing\n",
+    "\\begin{equation}\n",
+    "    \\underbrace{P(\\theta_1, \\theta_2, \\theta_5, \\dots | D)}_{\\text{Marginal posterior}} = \\int \\int \\underbrace{P(\\theta_1, \\theta_2, \\dots | D)}_{\\text{Full posterior}} d\\theta_3 d\\theta_4\\,. \\tag{8}\n",
+    "\\end{equation}\n",
+    "\n",
+    "<figure  style=\"text-align: center;\">\n",
+    "  <img src=\"images/Corner.png\" alt=\"Corner plot\" style=\"width: 45%; height: auto;\">\n",
+    "  <figcaption>Corner plot of three parameter (H<sub>0</sub>, &omega;<sub>b</sub>, &omega;<sub>cdm</sub>) cosmological model.</figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "\n",
+    "Marginalization is often done numerically and when we use results produced by MCMC it's even simpler, without explicit integration.\n"
    ]
   },
   {
@@ -496,7 +542,7 @@
     "**NB! Supernovae data and CMB measurements give different values for H_0! $\\Rightarrow$ Hubble tension**\n",
     "\n",
     "<figure  style=\"text-align: center;\">\n",
-    "  <img src=\"images/Pantheon+SH0ES.png\" alt=\"Hubble tension\" style=\"width: 75%; height: auto;\">\n",
+    "  <img src=\"images/Pantheon+SH0ES.png\" alt=\"Hubble tension\" style=\"width: 50%; height: auto;\">\n",
     "  <!--<figcaption>Picture of a Hubble tension <a href=https://arxiv.org/pdf/1907.10625>https://arxiv.org/pdf/1907.10625 </a></figcaption>-->\n",
     "  <figcaption>Picture of a Pantheon+ & SH0ES analysis <a href=https://arxiv.org/pdf/2202.04077>https://arxiv.org/pdf/2202.04077. </a> We can also see the Hubble tension between Supernovae and Planck datasets.</figcaption>\n",
     "</figure>\n",
@@ -597,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
